<LinearLayout
    android:id="@+id/layout_message"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bg_screen1">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionaire"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        android:gravity="center">
    </androidx.appcompat.widget.AppCompatTextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:textAlignment="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/happiness"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_head">
        </androidx.appcompat.widget.AppCompatTextView>

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>-->


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_am_happy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc"
            android:layout_marginTop="@dimen/slide_margin">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
                android:id="@+id/radio1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scale_1">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scale_2">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scale_3">
                </RadioButton>
            </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_happy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friend_happy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career_happy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleased"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pleased_approach"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio6"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rarely_interested"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc">
        </androidx.appcompat.widget.AppCompatTextView>
        <RadioGroup
            android:id="@+id/radio7"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_1">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_2">
            </RadioButton>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_3">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>